# automated-research-report-generation

./: .gitignore  Dockerfile  Dockerfile.jenkins  Jenkinsfile  README.md  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  get_lib_versions.py  pyproject.toml  requirements.txt  setup-app-infrastructure.sh
notebook/: test.ipynb
research_and_analyst/api/: main.py
research_and_analyst/api/routes/: report_routes.py
research_and_analyst/backend_server/: models.py  workflow.py
research_and_analyst/exception/: custom_exception.py
research_and_analyst/logger/: __init__.py
research_and_analyst/notebook/: test.ipynb
research_and_analyst/prompt_lib/: prompt_locator.py  prompts.py
research_and_analyst/utils/: config_loader.py  model_loader.py
