[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "ipykernel>=6.30.1",
    "langchain_groq>=0.3.6",
    "langchain_google_genai>=2.1.8",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langgraph>=0.6.8",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
    "structlog>=25.4.0"
    ]

# Optional: authors, license
authors = [{ name = "Krishna Thakkar" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]
include = ["automated_research_report_generation*"]
